Kinda works I think

--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "jquery": "^3.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "shortid": "^2.2.15",
+    "use-reducer-async": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
